[tool.poetry.scripts]
yardstick = "yardstick.cli.cli:cli"


[tool.poetry]
name = "yardstick"
version = "0.0.0" # note: this is automagically managed -- no need to manually change this
description = "Tool for comparing the results from vulnerability scanners"
authors = ["Alex Goodman <alex.goodman@anchore.com>"]
license = "Apache 2.0"
exclude = [
        "tests/**/*"
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8"
dataclasses-json = "^0.5.8"
tabulate = "^0.9.0"
prompt-toolkit = "^3.0.18"
Pygments = "^2.16.1"
requests = "^2.31.0"
GitPython = "^3.1.32"
rfc3339 = "^6.2"
Colr = "^0.9.1"
omitempty = "^0.1.1"
importlib-metadata = "^6.7.0"
mergedeep = "^1.3.4"
dataclass-wizard = "^0.22.2"
PyYAML = ">= 6.0.0, < 7.0"  # note: required for enterprise

[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.11.1"
pytest = "^7.4.0"
black = "^23.3.0"
pre-commit = "^2.11.1"
mypy = "^1.4"
isort = "^5.12.0"
pylint = "^2.7.2"
autoflake = "^2.1"
tox = "^4.10.0"

[build-system]
requires = ["poetry-core>=1.3.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.isort]
# all settings suggested by black: https://black.readthedocs.io/en/stable/compatible_configs.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.pylint.messages_control]
disable = [
        # pylint sometimes complains about black's formatting; we go with black
        "bad-continuation",
        "C0330",
        "C0326",

        # pylint wants deferred formatting for log messages (to use less CPU if that log level is disabled). We prefer the legibility of f-strings: f"a is {a}"
        "logging-format-interpolation",
        "logging-fstring-interpolation",
        "logging-not-lazy",

        # haven't gotten around to doc strings yet
        "missing-function-docstring",
        "missing-module-docstring",
        "missing-class-docstring",

        # this is a bit strict for a few cases
        "invalid-name",
        "duplicate-code",

        # having TODO's and FIXME's are OK in a codebase
        "fixme",

        # dataclasses shouldn't be restricted on the number of instance attributes
        "R0902",

        # this seems to make wrong guesses
        "unnecessary-lambda",

        # "too few public methods" does not take into account UI element bindings in an event update driven fashion
        "R0903",
    ]

[tool.pylint.format]
# allow for a wide-birth
max-line-length = "150"

# TODO: add tox support https://github.com/tox-dev/tox/issues/814 & https://tox.readthedocs.io/en/latest/example/basic.html#pyproject-toml-tox-legacy-ini

# TODO: port this section to "tool.mypy" when supported
[mypy]
check_untyped_defs = 0
ignore_missing_imports = 1
ignore_errors = 0
strict_optional = 0
warn_unused_ignores = 1
warn_redundant_casts = 1
warn_unused_configs = 1
